# image-reconstruction

./: .gitignore  2.1.basic_lighting.fs  2.1.basic_lighting_vertex.fs  2.1.basic_lighting_vertex.vs  CMakeLists.txt  Normal.h  README.md  StandardShading.fragmentshader  main.cpp  matriz.cpp  matriz.h  old-main.cpp  triangulo.fs  triangulo.vs  triangulo2.vs  triangulo3.vs
common/: controls.cpp  objloader.cpp  objloader.hpp  plyloader.cpp  plyloader.hpp
include/: Colors.cpp  Image.h  Image.hpp  Point.h  PointCloudModel.hpp  Reconstructor.hpp  Shader.hpp
models/: horse.ply  shark.ply
shaders/: PointCloud.fs  PointCloud.vs  StandardShading.fragmentshader
src/: Colors.cpp  Model.cpp  Model.hpp  ModelVisualizer.cpp  ModelVisualizer.hpp  Point.hpp  PointCloudModel.cpp  PointCloudModel.hpp  Reconstructor.cpp  Reconstructor.hpp  Shader.cpp  main.cpp
